# summit-ave

./: README.md
3d_pointcloud_viz/www/: index.html
ArcAsciiToImage/: ArcAsciiToImage.pro  CMakeLists.txt  README.md  arcasciiparser.cpp  arcasciiparser.h  arcasciirenderer.cpp  arcasciirenderer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  roadmap.md
TerrainUtils/: TerrainUtilsBrowser.js  package.json
VegaConnect/: config.xml  install_usb.sh
VegaConnect/reactapp/: package.json
VegaConnect/www/: index.html  index.html~  manifest.json  manifest.mobile.json  react-toolbox.css  react-toolbox.js
VegaConnect/www/images/: PaulSlinky.img  louisgv.img  sevenbitbyte.img
VegaConnect/www/old/: index.html
dreammouse/: dreammouse.js  package.json
duplocator/: README.md  duplocator.h  duplocator.pro  main.cpp
gpsfilter/: README.md  defines.h  gpsfilter.pro  locationdb.cpp  locationdb.h  main.cpp  trackpoint.cpp  trackpoint.h
gpsfilter/UTM/: constants.h  conversion.cpp  conversion.h
jsdbus/: dbustest.js
snappy-examples/clnb-environment-controller/: build.sh
snappy-examples/notes/: default.sbuildrc  setup.md
streamline/: CMakeLists.txt  README.md  Streamline.pro  roadmap.md
streamline-nodejs/: README.md  app.js  package.json
streamline-nodejs/lib/: LLGrid.js  db.js  histogram.js  terrain_arcascii_crawler.js
streamline-nodejs/lib/methods/: arcascii_parser.js  bounds.js  downloads.js  grid.js  point.js  utils.js
streamline-nodejs/lib/models/: terrain_model.js
streamline-nodejs/public/: parser_test.html  restTest.html  scrape_test.html  sphere.html  terrain_test.html  terrain_test.html~  threetest.html  timetest.html
streamline-nodejs/public/js/: nimbus.js  utils.js
streamline-nodejs/routes/: index.js  user.js
streamline-nodejs/routes/nimbus/: histogram.js  index.js  location.js  location_utils.js  mousecontrol.js  terrain_renderer.js
streamline-nodejs/views/: index.ejs
streamline/src/: contentmanager.cpp  contentmanager.h  debug.h  main.cpp
streamline/src/datastore/: database.cpp  database.h  datum.cpp  table.cpp
streamline/src/datastore/types/: filerecord.cpp  filerecord.h  locationdatum.cpp  locationdatum.h  locationsegment.cpp  locationsegment.h
streamline/src/gps/: trackpoint.cpp  trackpoint.h
streamline/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h
terrain_tile_server/: package.json  server.js
terrain_tile_server/lib/: histogram.js  routes.js  terrain_tile_handlers.js
terrain_tile_server/lib/db/: terrain_datasource.js
terrain_tile_server/lib/region/: render.js
terrain_tile_server/lib/tile/: handlers.js  render.js
vega-ctrl/: bower.json  config.xml  ionic.project  package.json
vega-ctrl/scss/: controller.scss  home.scss  ionic.app.scss  status.scss
vega-ctrl/www/: index.html  index.js
vega-ctrl/www/css/: ionic.app.css  ionic.app.min.css
vega-ctrl/www/db/: clips.json
vega-ctrl/www/factories/: annyang.js  datastore.js  joystick.js  ros.js  socket.js  utils.js
vega-ctrl/www/modules/: tabs.html
vega_control/: package.json  server.js
vega_control/app/: index.jsx
vega_control/app/components/: layout_test.jsx  left_menu.jsx
vega_control/www/media/: font-roboto.css  icons-material.css
webaudio_demo/: RunningStats.js  index.html
webspeech/: speech_recognition.html
(+67 files in other folders)
